--- a/index.html
+++ b/index.html
@@ -6,4 +6,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     </head>
+
+    <title>Zeyu Yang</title>
+
+    <body>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" id="Home">
+            <a class="navbar-brand" href="#Home">Zeyu Yang</a>
+        </nav>
+    </body>
 </html>
