--- a/index.html
+++ b/index.html
@@ -2,26 +2,12 @@
 
 <html lang="en">
     <head>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111713571-1"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'UA-111713571-1');
-        </script>
-
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap core CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-
-        <!-- Custom styles for this template -->
-        <link href="jumbotron.css" rel="stylesheet">
-        <script src="js/main.js"></script>
-        <script src="js/scroll.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
     </head>
 
     <title>Zeyu Yang</title>
@@ -92,6 +78,34 @@
             <ul>
                 <li>Wokring on the manuscripts</li>
                 <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
         </div>
 
         <!-- Publications -->
@@ -127,6 +141,26 @@
         <div class="container" style="padding-top: 20px; font-size: 17px; width: 1080px">
             <h3 id="Honors" style="padding-top: 80px; margin-top: -80px;">Selected Honors</h3>
             <ul>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
+                <li>Wokring on the manuscripts</li>
+                <li>Greetings</li>
                 <li>Wokring on the manuscripts</li>
                 <li>Greetings</li>
             </ul>
