--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <!-- Required meta tags -->
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
@@ -25,7 +25,10 @@
                         <a class="nav-link" href="#Publication">Publications</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Contact">Contact</a>
+                        <a class="nav-link" href="#Projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Teaching">Teaching</a>
                     </li>
                 </ul>
             </div>
@@ -115,7 +118,7 @@
                 <span style="float:right;"><a href="https://scholar.google.com/citations?user=CaKsmnUAAAAJ&hl=en">[Full List]</a></span>
             </h3>
 
-            <script id="pubs_by_date" language="text"></script>
+            <!-- Paper -->
             <div class="row">
                 <div class="col-md-3">
                     <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="" style="border:1px solid black">
