--- a/index.html
+++ b/index.html
@@ -34,14 +34,16 @@
             </div>
         </nav>
 
-        <div class="container" style="padding-top: 50px; font-size: 17px; width: 1080px" id="Home">
-            <!-- About me -->
+        <!-- Home -->
+        <div id="Home" class="container" style="padding-top: 50px; font-size: 17px; width: 100%">
             <div class="row">
-                <div class="col-md-4", style="padding-right: 40px; padding-top: 25px">
-                    <img class="img-responsive img-rounded" src="assets/photos/tom.png" alt="poor tom" style="max-width: 220px; color: solid black"><br>
+                <!-- Photo -->
+                <div class="col-md-3", style="padding-top: 25px">
+                    <img class="img-responsive img-rounded" src="assets/photos/tom.png" alt="poor tom" style="max-width: 100%"><br>
                 </div>
 
-                <div class="col-md-4", style="padding-right: 40px; padding-top: 25px">
+                <!-- Intro -->
+                <div class="col-md-6", style="padding-top: 25px">
                     <h2>Zeyu Yang</h2>
                     <p>
                         Master student <br>
@@ -54,7 +56,8 @@
                     </p>
                 </div>
 
-                <div class="col-md-4", style="padding-right: 40px; padding-top: 25px">
+                <!-- Research Topics -->
+                <div class="col-md-3", style="padding-top: 25px">
                     <font color="black"><b>Research Topics:</b><br>
                         <a>Generative Modeling</a> <br>
                         <a>Digital Health</a> <br>
@@ -67,7 +70,7 @@
 
             <!-- Short bio -->
             <div class="row">
-                <div class="col-md-12" style="padding-right: 40px; padding-top: 25px;">
+                <div class="col-md-12" style="padding-top: 25px;">
                     <p>
                         I am a master of data science student at Rice University.
                     </p>
@@ -76,44 +79,17 @@
         </div>
 
         <!-- News -->
-        <div class="container" style="padding-top: 20px; font-size: 17px; width: 1080px">
-            <h3 id="News" style="padding-top: 80px; margin-top: -80px;">News</h3>
+        <div id="News" class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
+            <h3 >News</h3>
             <ul>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
+                <li>Joined Houston Methodist</li>
+                <li>Started master studies</li>
+                <li>Started undergrad studies</li>
         </div>
 
         <!-- Publications -->
-        <div class="container" style="padding-top: 20px; font-size: 17px; width: 1080px">
-            <h3 id="Publication" style="padding-top: 80px; margin-top: -80px;">
+        <div id="Publication" class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
+            <h3>
                 Publications
                 <span style="float:right;"><a href="https://scholar.google.com/citations?user=CaKsmnUAAAAJ&hl=en">[Full List]</a></span>
             </h3>
@@ -140,47 +116,34 @@
             </div>
         </div>
 
-        <!-- Honors -->
-        <div class="container" style="padding-top: 20px; font-size: 17px; width: 1080px">
-            <h3 id="Honors" style="padding-top: 80px; margin-top: -80px;">Selected Honors</h3>
+        <!-- Projects -->
+        <div id="Projects" class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
+            <h3>Projects</h3>
             <ul>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
+                <li>COMP</li>
             </ul>
         </div>
 
         <!-- Teaching -->
-        <div class="container" style="padding-top: 20px; font-size: 17px; width: 1080px">
-            <h3 id="Teaching" style="padding-top: 80px; margin-top: -80px;">Teaching</h3>
+        <div id="Teaching" class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
+            <h3>Teaching</h3>
             <ul>
-                <li>Wokring on the manuscripts</li>
-                <li>Greetings</li>
+                <li>COMP 665</li>
+                <li>COMP 680</li>
+                <li>COMP 665</li>
+                <li>COMP 680</li>
+                <li>COMP 665</li>
+                <li>COMP 680</li>
+                <li>COMP 665</li>
+                <li>COMP 680</li>
+                <li>COMP 665</li>
+                <li>COMP 680</li>
             </ul>
         </div>
 
         <!-- Contact -->
-        <div class="container" style="padding-top: 20px; font-size: 17px; width: 1080px">
-            <h3 id="Contact" style="padding-top: 80px; margin-top: -80px;">Contact</h3>
+        <div class="container" style="padding-top: 25px; padding-bottom: 25px; font-size: 17px; width: 100%">
+            <h3>Contact</h3>
             Computational Wellbeing Group @ Rice University <br>
             6100 Main St, Houston, TX, 77005
         </div>
