--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
     <body>
         <!-- Navigator -->
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="#Home">Zeyu Yang</a>
+            <a class="navbar-brand" href="">Zeyu Yang</a>
             <div class="collapse navbar-collapse" id="navbarToggle">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#Home">Home</a>
+                        <a class="nav-link" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Publication">Publications</a>
+                        <a class="nav-link" href="#publication">Publications</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Projects">Projects</a>
+                        <a class="nav-link" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Teaching">Teaching</a>
+                        <a class="nav-link" href="#teaching">Teaching</a>
                     </li>
                 </ul>
             </div>
         </nav>
 
         <!-- Home -->
-        <div id="Home" class="container" style="padding-top: 50px; font-size: 17px; width: 100%">
+        <div id="home" class="container" style="padding-top: 50px; font-size: 17px; width: 100%">
             <div class="row">
                 <!-- Photo -->
                 <div class="col-md-3", style="padding-top: 25px">
@@ -79,7 +79,7 @@
         </div>
 
         <!-- News -->
-        <div id="News" class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
+        <div id="news" class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
             <h3 >News</h3>
             <ul>
                 <li>Joined Houston Methodist</li>
@@ -88,7 +88,7 @@
         </div>
 
         <!-- Publications -->
-        <div id="Publication" class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
+        <div id="publication" class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
             <h3>
                 Publications
                 <span style="float:right;"><a href="https://scholar.google.com/citations?user=CaKsmnUAAAAJ&hl=en">[Full List]</a></span>
@@ -117,7 +117,7 @@
         </div>
 
         <!-- Projects -->
-        <div id="Projects" class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
+        <div id="projects" class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
             <h3>Projects</h3>
             <ul>
                 <li>COMP</li>
@@ -125,7 +125,7 @@
         </div>
 
         <!-- Teaching -->
-        <div id="Teaching" class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
+        <div id="teaching" class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
             <h3>Teaching</h3>
             <ul>
                 <li>COMP 665</li>
