--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
+        <link rel="stylesheet" href="assets/css/stylesheet.css">
     </head>
 
     <title>Zeyu Yang</title>
@@ -79,22 +80,30 @@
         </div>
 
         <!-- News -->
-        <div id="news" class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
-            <h3 >News</h3>
+        <div class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
+            <h3 id="news" style="padding-top: 80px; margin-top: -80px;">News</h3>
             <ul>
-                <li>Joined Houston Methodist</li>
-                <li>Started master studies</li>
-                <li>Started undergrad studies</li>
+                <li>Started working at Houston Methodist as a Research Assistant in June 2023.</li>
+                <li>Completed Master of Data Science degree from Rice University in May 2023.</li>
+                <li>Completed Bachelor of Electrical Engineering degreee from University of Electronic Science and Technology of China in May 2021.</li>
+            </ul>
         </div>
 
         <!-- Publications -->
-        <div id="publication" class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
-            <h3>
+        <div class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
+            <h3 id="publication" style="padding-top: 80px; margin-top: -80px;">
                 Publications
                 <span style="float:right;"><a href="https://scholar.google.com/citations?user=CaKsmnUAAAAJ&hl=en">[Full List]</a></span>
             </h3>
 
-            <!-- Paper -->
+            <!-- <ul>
+                <li>Diffusion model</li>
+                <li>Asynchronized ADMM</li>
+                <li>Joint investment</li>
+                <li>Nature methods</li>
+            </ul> -->
+
+            <!-- Item -->
             <div class="row">
                 <div class="col-md-3">
                     <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="" style="border:1px solid black">
@@ -117,35 +126,145 @@
         </div>
 
         <!-- Projects -->
-        <div id="projects" class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
-            <h3>Projects</h3>
-            <ul>
-                <li>COMP</li>
-            </ul>
+        <div class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
+            <h3 id="projects" style="padding-top: 80px; margin-top: -80px;">Projects</h3>
+
+            <!-- <ul>
+                <li>PlotNet</li>
+                <li>Audubon Object detection</li>
+                <li>Smart Grid TII paper</li>
+                <li>Plotly Dash GIS</li>
+                <li>Matrix Factorization</li>
+                <li>Motion Planning</li>
+                <li>Linear Programming Recipe recommendation</li>
+            </ul> -->
+
+            <!-- Item -->
+            <div class="row">
+                <div class="col-md-3">
+                    <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="" style="border:1px solid black">
+                        <source src="files/paper/23-llm-debate/debate.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="col-md-9">
+                    <b><font color="black">Improving Factuality and Reasoning in Language Models through Multiagent Debate</font></b><br>
+                    <a href="https://yilundu.github.io/" target="_blank">Yilun Du</a>,
+                    <a href="https://people.csail.mit.edu/lishuang/"><u><b>Shuang Li</b></u></a>,
+                    <a href="https://groups.csail.mit.edu/vision/torralbalab/" target="_blank">Antonio Torralba</a>,
+                    <a href="https://scholar.google.com/citations?user=rRJ9wTJMUB8C&hl=en" target="_blank">Joshua B. Tenenbaum</a>, and
+                    <a href="https://scholar.google.com/citations?user=Vzr1RukAAAAJ&hl=en" target="_blank">Igor Mordatch</a><br>
+                    <b><a href="https://roboticsconference.org/" target="_blank">arXiv 2023</a></b> <br>
+                    <a href="https://composable-models.github.io/llm_debate/" target="_blank"> <small>[Project]</small></a>
+                    <a href="https://arxiv.org/abs/2305.14325" target="_blank"> <small>[Paper]</small></a>
+                    <a href="https://github.com/composable-models/llm_multiagent_debate" target="_blank"> <small>[Code]</small></a>
+                </div>
+            </div>
         </div>
 
         <!-- Teaching -->
-        <div id="teaching" class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
-            <h3>Teaching</h3>
+        <div class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
+            <h3 id="teaching" style="padding-top: 80px; margin-top: -80px;">Teaching</h3>
+            
+            <!-- Item -->
+            <div class="row">
+                <div class="col-md-12">
+                    <b><font color="black">Graduate Teaching Assistant</font></b><br>
+                    <div class="col-md-12">
+                        <ul>
+                            <li>
+                                <a href="https://cs.rice.edu/~as4310/2023-spring.html" target="_blank">Data Visualization</a> (COMP 665, Graduate Level, Rice University) <br>
+                                Term: Spring 2023, Fall 2022, Summer 2022, Spring 2022 <br>
+                                Instructor: <a href="https://profiles.rice.edu/faculty/joe-d-warren" target="_blank">Dr. Joe Warren</a>, 
+                                <a href="https://profiles.rice.edu/faculty/marmar-orooji" target="_blank">Dr. Marmar Orooji</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Item -->
+            <div class="row">
+                <div class="col-md-12">
+                    <b><font color="black">Graduate Academic Tutor</font></b><br>
+                    <div class="col-md-12">
+                        <ul>
+                            <li>
+                                <a href="https://cs.rice.edu/~as4310/2023-spring.html" target="_blank">Statistics for Computing and Data Science</a> (COMP 680, Graduate Level, Rice University) <br>
+                                Term: Fall 2022 <br>
+                                Instructor: <a href="https://profiles.rice.edu/faculty/su-chen" target="_blank">Dr. Su Chen</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Working Experience -->
+        <div class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
+            <h3 id="working" style="padding-top: 80px; margin-top: -80px;">Working Experience</h3>
+
+            <!-- Item -->
+            <div class="row">
+                <div class="col-md-12">
+                    <b><font color="black">Graduate Academic Tutor</font></b><br>
+                    <div class="col-md-12">
+                        <ul>
+                            <li>
+                                <a href="https://cs.rice.edu/~as4310/2023-spring.html" target="_blank">Statistics for Computing and Data Science</a> (COMP 680, Graduate Level, Rice University) <br>
+                                Term: Fall 2022 <br>
+                                Instructor: <a href="https://profiles.rice.edu/faculty/su-chen" target="_blank">Dr. Su Chen</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Item -->
+            <div class="row">
+                <div class="col-md-12">
+                    <b><font color="black">Graduate Academic Tutor</font></b><br>
+                    <div class="col-md-12">
+                        <ul>
+                            <li>
+                                <a href="https://cs.rice.edu/~as4310/2023-spring.html" target="_blank">Statistics for Computing and Data Science</a> (COMP 680, Graduate Level, Rice University) <br>
+                                Term: Fall 2022 <br>
+                                Instructor: <a href="https://profiles.rice.edu/faculty/su-chen" target="_blank">Dr. Su Chen</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Selected Honors -->
+        <div class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
+            <h3 id="honors" style="padding-top: 80px; margin-top: -80px;">Selected Honors</h3>
             <ul>
-                <li>COMP 665</li>
-                <li>COMP 680</li>
-                <li>COMP 665</li>
-                <li>COMP 680</li>
-                <li>COMP 665</li>
-                <li>COMP 680</li>
-                <li>COMP 665</li>
-                <li>COMP 680</li>
-                <li>COMP 665</li>
-                <li>COMP 680</li>
+                <li>Outstanding Student Award - University of Electronic Science and Technology of China, 2021</li>
+                <li>Meritorious Winner of Interdisciplinary Contest in Modeling - Consortium for Mathematics and Its Applications, 2020</li>
             </ul>
+        </div>
+
+        <!-- Interests -->
+        <div class="container" style="padding-top: 25px; font-size: 17px; width: 100%">
+            <h3 id="interests" style="padding-top: 80px; margin-top: -80px;">Interests</h3>
+            I like basketball, both playing and watching games. I also enjoy playing chess, and I won national junior Chinese chess tournament in 2009.
+            I also like reading books in the topics of history and philosophy.
         </div>
 
         <!-- Contact -->
         <div class="container" style="padding-top: 25px; padding-bottom: 25px; font-size: 17px; width: 100%">
-            <h3>Contact</h3>
+            <h3 id="contact" style="padding-top: 80px; margin-top: -80px;">Contact</h3>
             Computational Wellbeing Group @ Rice University <br>
             6100 Main St, Houston, TX, 77005
         </div>
+
+        <!-- Footer -->
+        <footer>
+            Last updated: <span id="last-updated"></span>
+        </footer>
+
+        <!-- Bootstrap core JavaScript -->
+        <script src="assets/js/date.js"></script>
     </body>
 </html>
