--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <!-- Navigator -->
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
             <a class="navbar-brand" href="">Zeyu Yang</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -28,6 +31,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#projects">Projects</a>
                     </li>
+                    <!-- <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Action 1</a>
+                            <a class="dropdown-item" href="#">Action 2</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Separated Link</a>
+                        </div>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="#teaching">Teaching</a>
                     </li>
@@ -36,7 +50,7 @@
         </nav>
 
         <!-- Home -->
-        <div id="home" class="container" style="padding-top: 50px; font-size: 17px; width: 100%">
+        <div id="home" class="container" style="padding-top: 80px; font-size: 17px; width: 100%">
             <div class="row">
                 <!-- Photo -->
                 <div class="col-md-3", style="padding-top: 25px">
@@ -69,7 +83,7 @@
                 </div>
             </div>
 
-            <!-- Short bio -->
+            <!-- Short Bio -->
             <div class="row">
                 <div class="col-md-12" style="padding-top: 25px;">
                     <p>
@@ -256,7 +270,11 @@
             Last updated: <span id="last-updated"></span>
         </footer>
 
-        <!-- Bootstrap core JavaScript -->
+        <!-- Javascript -->
+        <!-- Date -->
         <script src="assets/js/date.js"></script>
+        <!-- Navigator bar -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     </body>
 </html>
